2008-09-25  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/WSSeed.cxx:
	Data-member m_anim_tick was only increased when running in
	auto-anim mode (not from outside time-source).
	Thanks valgrind.

2008-09-23  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/Mover.cxx:
	* Glasses/Mover.h:
	* Glasses/RndSMorphCreator.cxx:
	* Glasses/RndSMorphCreator.h:
	* Glasses/Sleeper.cxx:
	* Glasses/Sleeper.h:
	* Glasses/TimeMaker.cxx:
	* Glasses/TimeMaker.h:
	* Glasses/WSWalker.cxx:
	* Glasses/WSWalker.h:
	Operator::Operate() does not have exception specifier anymore.
	
	* Rnr/GL/ZImage_GL_Rnr.cxx:
	Give up on ATI ever supporting non-pow-2 textures.
	Use image-rescale-to-pow2 for all 2.1 drivers.

2008-08-11  Matevz Tadel  <matevz.tadel@ijs.si>

	* Rnr/GL/ZImage_GL_Rnr.cxx:
	Extended image-rescale-to-pow2 for ATI to GL version 2.1.7769.

2008-07-20  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/GLTesterOne.cxx:
	Follow changes in PupilInfo.

	* Rnr/GL/ZImage_GL_Rnr.cxx:
	Extended image-rescale-to-pow2 for ATI to GL version 2.1.7659.
	Whitespace.

2008-05-26  Matevz Tadel  <matevz.tadel@ijs.si>

	* Stones/TringTvor.h:
	Add function 'Float_t SqrDistanceToVertex(Int_t vi, const Float_t p[3])'.

2008-05-24  Matevz Tadel  <matevz.tadel@ijs.si>

	* Rnr/GL/ZImage_GL_Rnr.cxx:
	Extended image-rescale-to-pow2 for ATI to GL version 2.1.7537.

2008-05-18  Matevz Tadel  <matevz.tadel@ijs.si>

	* Stones/TringTvor.cxx:
	* Stones/TringTvor.h:
	Added GenerateTriangleColorsFromTriangleStrips().
	Add some docs.

	* Rnr/GL/TringTvor_GL_Rnr.cxx:
	Use glMultiDrawElements() for smooth rendering when using triangle
	strips.

	* Glasses/RectTerrain.cxx:
	* Glasses/RectTerrain.h:
	Added option to colorize triangle strips with random colors.
	Do not use triangle strips by default.

2008-04-21  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/FormulaMover.cxx:
	* Glasses/FormulaMover.h:
	* Glasses/LocalMover.cxx:
	* Glasses/LocalMover.h:
	New files - in fact old files with classes I never really got to